# hello-ai

./: .gitignore
backend/: main.py  pyproject.toml
frontend/: app.json  package-lock.json  package.json
frontend/app/: index.tsx
